--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,19 +28,23 @@ jobs:
   build-windows:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          python -m pip install pyinstaller
-      - name: Build for Windows
-        run: |
-          pyinstaller --onefile --add-data "assets;assets" main.py
-          ren dist\main.exe SkyDodo.exe
-          powershell Compress-Archive -Path SkyDodo.exe,assets -DestinationPath SkyDodo_Windows.zip
-      - uses: actions/upload-artifact@v4
-        with:
-          name: SkyDodo_Windows
-          path: SkyDodo_Windows.zip
+        - uses: actions/checkout@v3
+        - name: Install dependencies
+          run: |
+            python -m pip install pyinstaller
+        - name: Build for Windows
+          run: |
+            pyinstaller --onefile --add-data "assets;assets" main.py
+            rename dist\main.exe SkyDodo.exe
+            mkdir release
+            move SkyDodo.exe release\
+            xcopy assets release\assets\ /E /I
+            Compress-Archive -Path release\* -DestinationPath SkyDodo_Windows.zip
+        - uses: actions/upload-artifact@v4
+          with:
+            name: SkyDodo_Windows
+            path: SkyDodo_Windows.zip
+
 
   build-macos:
     runs-on: macos-latest
